Node_JS_APP/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-poc
  labels:
    app.kubernetes.io/managed-by: jenkins
    environment: production
